--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -6,8 +6,10 @@
     "outDir": "../javascript", // 컴파일된 JavaScript 파일의 출력 디렉토리
     "strict": true, // 엄격한 타입 체크 활성화
     "esModuleInterop": true, // CommonJS 모듈을 ES 모듈처럼 사용하기 위한 설정
+    "declaration": true,
+    "declarationDir": "./docs",
   },
   "include": [
     "*.ts"
-  ]
+  ],
 }
